# robot_competition

./: .gitignore  README.md  robot_competition.code-workspace
dependencies/: covariance_calculator.py  covariance_calculator_from_csv.py
install/: local_setup.sh  setup.sh
install/control_node_cpp/share/ament_index/resource_index/package_run_dependencies/: control_node_cpp
install/control_node_cpp/share/ament_index/resource_index/parent_prefix_path/: control_node_cpp
install/control_node_cpp/share/control_node_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/control_node_cpp/share/control_node_cpp/cmake/: control_node_cppConfig-version.cmake  control_node_cppConfig.cmake
install/control_node_cpp/share/control_node_cpp/environment/: ament_prefix_path.dsv  path.dsv
install/cpp_wiring_pi_connection_test_cpp/share/cpp_wiring_pi_connection_test_cpp/: package.bash  package.zsh
install/driver_node_cpp/share/ament_index/resource_index/package_run_dependencies/: driver_node_cpp
install/driver_node_cpp/share/ament_index/resource_index/parent_prefix_path/: driver_node_cpp
install/driver_node_cpp/share/driver_node_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/driver_node_cpp/share/driver_node_cpp/cmake/: driver_node_cppConfig-version.cmake  driver_node_cppConfig.cmake
install/driver_node_cpp/share/driver_node_cpp/environment/: ament_prefix_path.dsv  path.dsv
install/example_package_cpp/share/ament_index/resource_index/parent_prefix_path/: example_package_cpp
install/example_package_cpp/share/example_package_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/example_package_cpp/share/example_package_cpp/cmake/: ament_cmake_export_dependencies-extras.cmake  example_package_cppConfig.cmake
install/rcl_cpp_simple/share/rcl_cpp_simple/: package.bash  package.zsh
install/simple/share/ament_index/resource_index/package_run_dependencies/: simple
install/simple/share/ament_index/resource_index/parent_prefix_path/: simple
install/simple/share/simple/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/simple/share/simple/cmake/: ament_cmake_export_dependencies-extras.cmake  simpleConfig-version.cmake  simpleConfig.cmake
install/simple/share/simple/environment/: ament_prefix_path.dsv  path.dsv
launch/: ekf.launch.py  joy_override_control_launch.py  main_launch.py  motor_control_launch.py  motor_with_odometry.launch.py  remote_control_launch.py  rotor_control_launch.py
log/: latest_build
params/: ekf.yaml
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
src/control/control_node_cpp/: CMakeLists.txt  package.xml
src/control/image_reciever/: CMakeLists.txt  package.xml
src/control/image_reciever/src/: image_reciever.cpp
src/control/joy_override_cpp/: CMakeLists.txt  package.xml
src/control/joy_override_cpp/src/: joy_control.cpp
src/control/legos_detector_py/: setup.cfg  setup.py
src/control/legos_detector_py/legos_detector_py/: legos_detector_py.py
src/control/local_navigation_cpp/: CMakeLists.txt  package.xml
src/control/local_navigation_cpp/action/: LocalNavigation.action
src/control/local_navigation_cpp/src/: LocalNavigationServer.cpp  LocalNavigationServer.hpp  local_navigation_server.cpp
src/control/main_control_cpp/: CMakeLists.txt  package.xml
src/control/main_control_cpp/src/: main_control_cpp.cpp  main_controller.cpp  main_controller.hpp
src/control/serial_reading_test/: CMakeLists.txt  package.xml
src/control/serial_reading_test/src/: serial_publisher.cpp
src/drivers/beacon_detector_py/: package.xml  setup.cfg  setup.py
src/drivers/beacon_detector_py/beacon_detector_py/: beacon_detector_py.py
src/drivers/demo_sensors/: CMakeLists.txt  package.xml
src/drivers/demo_sensors/src/: demo_sensor.cpp
src/drivers/driver_node_cpp/: CMakeLists.txt  package.xml
src/drivers/example_package_cpp/: CMakeLists.txt  package.xml
src/drivers/example_package_cpp/src/: example.cpp
src/drivers/imu_reader_py/: package.xml  setup.cfg  setup.py
src/drivers/imu_reader_py/imu_reader_py/: imu_publisher.py
src/drivers/legos_detector_py/: package.xml
src/drivers/on_off_send_cpp/: CMakeLists.txt  package.xml
src/drivers/on_off_send_cpp/src/: alternator.cpp
src/drivers/rotor_control/: CMakeLists.txt  package.xml
src/drivers/rotor_control/src/: rotor_control.cpp
src/drivers/rpi_camera/: CMakeLists.txt  package.xml
src/drivers/rpi_camera/src/: camera_node.cpp
src/drivers/rx_dispatcher/: CMakeLists.txt  package.xml
src/drivers/rx_dispatcher/src/: rx_dispatcher.cpp  rx_dispatcher.hpp
src/drivers/vision_py/: package.xml  setup.py
src/drivers/vision_py/vision_py/: vision_py.py
